[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
env_logger = "0.9.0"
log = "0.4.14" 
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.40"
bip32 = "0.3.0"
bech32 = "0.7.2"
hex = "0.4.2"
eth_checksum  = "0.1.2" 
primitive-types = { version = "0.11.1", default-features = false, features = ["rlp", "byteorder", "serde"] }

bip0039 = { git = "https://github.com/FindoraNetwork/bip0039", branch = "fix_extra_whitespace", features = ["chinese-simplified", "chinese-traditional", "french", "italian", "korean", "spanish", "japanese"] }
ed25519-dalek-bip32 = { git = "https://github.com/FindoraNetwork/ed25519-dalek-bip32", branch = "feat-allow-nohardened" }
noah  = { git = "https://github.com/FindoraNetwork/noah", tag = "v0.3.0" }  
noah-algebra  = { git = "https://github.com/FindoraNetwork/noah", tag = "v0.3.0" }

[patch.crates-io]
ark-ec = { git = "https://github.com/FindoraNetwork/ark-algebra", tag = "stable-2022" }
ark-ff = { git = "https://github.com/FindoraNetwork/ark-algebra", tag = "stable-2022" }
ark-serialize = { git = "https://github.com/FindoraNetwork/ark-algebra", tag = "stable-2022" }
ark-std = { git = "https://github.com/FindoraNetwork/ark-std", tag = "stable-2022" }
ark-bls12-381 = { git = "https://github.com/FindoraNetwork/ark-curves", tag = "stable-2022" }
ark-ed-on-bls12-381 = { git = "https://github.com/FindoraNetwork/ark-curves", tag = "stable-2022" }
ark-algebra-test-templates = { git = "https://github.com/FindoraNetwork/ark-algebra", tag = "stable-2022" }
curve25519-dalek = { git = "https://github.com/FindoraNetwork/curve25519-dalek", tag = "v3.2.0-f" }
ed25519-dalek = { git = "https://github.com/FindoraNetwork/ed25519-dalek", tag = "v1.0.1-f" }